src/components/code-editor/code-editor.styles.css
.CodeMirror {
  font-family: "Consolas";
  font-size: 24px;
  line-height: 1.6;
  max-width: calc(100vw - 296px);
  min-height: 100vh;
  padding-top: 16px;

  @media screen and (max-width: 768px) {
    max-width: 100vw;
    min-height: calc(100vh - 322px);
  }
}

@keyframes blink {
  0% { opacity: 1; }
  50% { opacity: 0; }
  100% { opacity: 1; }
}

.custom-caret {
  width: 3px;
  height: 34px;
  animation: blink 1s step-end infinite;
  position: absolute;
}

.custom-caret-head {
  width: 8px;
  height: 8px;
  position: absolute;
  top: -3px;
  left: -2.5px;
}

.cursor-badge {
  position: absolute;
  padding: 4px 8px;
  border-radius: 4px;
  transform: translateY(-100%);
  white-space: nowrap;
}

